load physical files to response

--- a/404.html
+++ b/404.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="utf-8" />
 </head>
-
 <title>
-    Hello World
+    404 NOT FOUND
 </title>
 
 <body>
-    Add
+    404 NOT FOUND
 </body>
 
 </html>
