--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
+
+<head>
+    <meta charset="utf-8" />
+</head>
+
 <title>
     Hello World
 </title>
+
 <body>
     <h1>Hello World</h1>
     <ul>
@@ -11,4 +17,5 @@
         <li><a href="delete.html">Delete</a></li>
     </ul>
 </body>
+
 </html>
