Added controls to page

--- a/delete.html
+++ b/delete.html
@@ -9,7 +9,10 @@
 </title>
 
 <body>
-    Delete
+    <form action="app/controller/delete.js" method="POST">
+        <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
+        <input type="submit" value="Delete"></input>
+    </form>
 </body>
 
 </html>
