Implementd the action 'add'

--- a/delete.html
+++ b/delete.html
@@ -9,7 +9,7 @@
 </title>
 
 <body>
-    <form action="app/controller/delete.js" method="POST">
+    <form action="/delete" method="POST">
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
         <input type="submit" value="Delete"></input>
     </form>
