--- a/find.html
+++ b/find.html
@@ -9,7 +9,7 @@
 </title>
 
 <body>
-    <form action="app/controller/find.js" method="GET">
+    <form action="/find" method="GET">
         <label for="argsEmail">Email: </label><input type="text" id="argsEmail" name="argEmail"></input><input type="submit" value="Find"></input>
         <hr/>
         <label for="git">Git: </label><input type="text" id="git" readonly="readonly" name="git"></input><br/>
