--- a/add.html
+++ b/add.html
@@ -9,12 +9,14 @@
 </title>
 
 <body>
-    <form action="app/controller/add.js" method="POST">
+    <form action="/add" method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git"></input><br/>
         <label for="name">Name: </label><input type="text" id="name" name="name"></inpu><br/>
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
         <input type="submit" value="Add"></input>
     </form>
+    <section id="response">
+    </section>
 </body>
 
 </html>
