--- a/edit.html
+++ b/edit.html
@@ -9,7 +9,7 @@
 </title>
 
 <body>
-    <form action="app/controller/edit.js" method="POST">
+    <form action="/edit" method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git"></input><br/>
         <label for="name">Name: </label><input type="text" id="name" name="name"></inpu><br/>
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
