--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <h1>Hello World</h1>
     <ul>
-        <li><a href="add.html">Add</a></li>
-        <li><a href="edit.html">Edit</a></li>
-        <li><a href="find.html">Find</a></li>
-        <li><a href="delete.html">Delete</a></li>
+        <li><a href="/add">Add</a></li>
+        <li><a href="/edit">Edit</a></li>
+        <li><a href="/find">Find</a></li>
+        <li><a href="/delete">Delete</a></li>
     </ul>
 </body>
 
