--- a/delete.html
+++ b/delete.html
@@ -13,6 +13,7 @@
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
         <input type="submit" value="Delete"></input>
     </form>
+    <section id="response"></section>
 </body>
 
 </html>
