--- a/find.html
+++ b/find.html
@@ -11,11 +11,9 @@
 <body>
     <form action="/find" method="GET">
         <label for="argsEmail">Email: </label><input type="text" id="argsEmail" name="argEmail"></input><input type="submit" value="Find"></input>
-        <hr/>
-        <label for="git">Git: </label><input type="text" id="git" readonly="readonly" name="git"></input><br/>
-        <label for="name">Name: </label><input type="text" id="name" readonly="readonly" name="name"></inpu><br/>
-        <label for="email">Email: </label><input type="text" id="email" readonly="readonly" name="email"></input><br/>
     </form>
+    <hr/>
+    <section id="response"></section>
 </body>
 
 </html>
