Implemented edit, find and remove

--- a/add.html
+++ b/add.html
@@ -9,6 +9,8 @@
 </title>
 
 <body>
+    <a href="/index" title="home">Home</a> &gt; Add
+    <hr/>
     <form action="/add" method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git"></input><br/>
         <label for="name">Name: </label><input type="text" id="name" name="name"></inpu><br/>
