--- a/find.html
+++ b/find.html
@@ -9,11 +9,13 @@
 </title>
 
 <body>
+    <a href="/index" title="home">Home</a> &gt; Find
+    <hr/>
     <form action="/find" method="GET">
-        <label for="argsEmail">Email: </label><input type="text" id="argsEmail" name="argEmail"></input><input type="submit" value="Find"></input>
+        <label for="email">Email: </label><input type="text" id="email" name="email"></input><input type="submit" value="Find"></input>
     </form>
     <hr/>
-    <section id="response"></section>
+    <section id="resFind"></section>
 </body>
 
 </html>
