--- a/edit.html
+++ b/edit.html
@@ -9,11 +9,14 @@
 </title>
 
 <body>
+    <a href="/index" title="home">Home</a> &gt; <a href="/find?email=" title="find">Find</a> &gt;Edit
+    <hr/>
     <form action="/edit" method="POST">
         <label for="git">Git: </label><input type="text" id="git" name="git"></input><br/>
         <label for="name">Name: </label><input type="text" id="name" name="name"></inpu><br/>
         <label for="email">Email: </label><input type="text" id="email" name="email"></input><br/>
         <input type="submit" value="Save"></input>
+        <input type="hidden" value="" name="oEmail"></input>
     </form>
     <section id="response"></section>
 </body>
