--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="/add">Add</a></li>
         <li><a href="/find">Find</a></li>
+        <li><a href="/remove">Remove</a></li>
     </ul>
 </body>
 
